# Quad_Ctrl_MAVROS

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
analysis/: bagPlots.m  bagProcessing.m  trajectoryAnim.m  trajectoryPlot3D.m  unpackBag.m
analysis/utils/: acc2R.m  acc2Thr.m  bag2TimeSeries.m  getRates.m  quaternion2R.m  reshapeRotm.m  setTrajectory.m  setVehicles.m  skew.m  zxy_R2Euler.m
config/: params_1.yaml  params_2.yaml  params_intel_1.yaml  params_intel_2.yaml
include/quad_ctrl_mavros/: uav.h  utils.h
launch/: multi_quad_ctrl.launch  multi_quad_ctrl_sitl.launch  quad_ctrl.launch  quad_ctrl_sitl.launch
src/: main.cpp  uav.cpp  utils.cpp
srv/: AssertReadiness.srv  RequestDeparture.srv
trajectories/8_laps/fast/: fast_8_lap_plane.csv  fast_8_lap_xyz.csv
trajectories/8_laps/slow/: slow_8_lap_plane.csv  slow_8_lap_xyz.csv
trajectories/ellipses/fast/: fast_xy_ellipse_3_laps.csv  fast_xyz_ellipse_3_laps.csv
trajectories/ellipses/fast/two_quads/: fast_ellipse_1.csv  fast_ellipse_2.csv
trajectories/ellipses/slow/: slow_xyz_ellipse_3_laps.csv  slow_xyz_ellipse_3_laps_v2.csv
trajectories/ellipses/slow/two_quads/: slow_ellipse_1.csv  slow_ellipse_2.csv
trajectories/steps/: xy_step.csv  xyz_step.csv  z_step.csv
trajectories/steps/z_steps/: z_step_1.csv  z_step_2.csv
